# terminal-control-mcp

./: .gitignore  CONFIG.md  PROJECT_STRUCTURE.md  README.md  TODO.md  main.py  pyproject.toml  pytest.ini  terminal-control.toml
.github/workflows/: publish-to-pypi.yml
docs/: COMPLETE_TOOL_LIST.md  INSTALLATION.md  OUTDATED_SPEC_NOTE.md  PYTHON_DEBUG_GUIDE.md  config.yaml  interactive_automation_mcp_spec.md  mcp_implementation_guide.md
examples/: example_debug.py
src/interactive_automation_mcp/: automation_engine.py  automation_types.py  database_automation.py  debugging_automation.py  interaction_logger.py  interactive_session.py  main.py  models.py  security.py  session_manager.py  ssh_automation.py  types.py  utils.py
src/interactive_automation_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/terminal_control_mcp/: config.py  interactive_session.py  main.py  models.py  security.py  session_manager.py  settings.py  terminal_utils.py  web_server.py  web_server_broken.py
tests/: conftest.py  minimal_bash_test.py  test_basic.py  test_config.py  test_core.py  test_edge_cases.py  test_execute_command.py  test_history_isolation.py  test_mcp_integration.py  test_new_workflow.py  test_security_manager.py  test_session_lifecycle.py  test_simplified_workflow.py
